js/js.translator/testData/incremental/invalidation/abstractClassWithJsExport/main/m.kt
fun box(): String {
    val x = FooImpl()
    return x.foo() + x.bar()
}